Fix clipping logo

--- a/src/app/signup/(otp)/page.module.scss
+++ b/src/app/signup/(otp)/page.module.scss
@@ -47,7 +47,7 @@
         & > svg {
           @apply h-full;
 
-          aspect-ratio: 7 / 2;
+          aspect-ratio: 7 / 2.125;
         }
       }
     }
